# Modern-Cpp

./: .gitignore  CppExamples.sln  README.md
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
Course Material/: Course Material.vcxproj  FunctorAndLambda.cpp  friend.cpp  pitfalls.cpp  rtti.cpp  stl_algorithms.cpp
CppExamples/: CppExamples.cpp  CppExamples.vcxproj  CppExamples.vcxproj.filters
Design Patterns/: Design Patterns.vcxproj  Design Patterns.vcxproj.filters  ImageFilterFactory.h  ImageFilterFactoryWithRegistry.h  Singleton.cpp  Singleton.h  SingletonMagicStatic.h  factory_tester.cpp  observer_v1.cpp  observer_v2.cpp  singleton_tester.cpp
Move Semantics/: Move Semantics.cpp  Move Semantics.vcxproj  Move Semantics.vcxproj.filters  TalkyVec.h
STL Any/: STL Any.vcxproj  any.cpp  test.cpp  type_traits.cpp
Smart Pointers/: CustomSmartHandle.cpp  CustomSmartHandle.h  ForwardDeclaration.cpp  ForwardDeclaration.h  Resource.cpp  Resource.h  Smart Pointers.cpp  Smart Pointers.vcxproj  Smart Pointers.vcxproj.filters
Structured Binding/: Structured Binding.vcxproj  test.cpp
Threads/: Threads.vcxproj  async.cpp  jthread.cpp  latch.cpp  locks.cpp  packages.config  promise.cpp  semaphore.cpp  threads.cpp
Virtual in Constructor/: Virtual in Constructor.cpp  Virtual in Constructor.vcxproj  Virtual in Constructor.vcxproj.filters
vector_size_increments/: CMakeLists.txt
vector_size_increments/vector_size_increments/: CMakeLists.txt  vector_size_increments.cpp
