# CMakeList.txt : CMake project for vector_size_increments, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (vector_size_increments "vector_size_increments.cpp" "vector_size_increments.h")

# TODO: Add tests and install targets if needed.
